CMAKE_MINIMUM_REQUIRED( VERSION 3.6 )

SET( CMAKE_CXX_STANDARD          11  )
SET( CMAKE_CXX_STANDARD_REQUIRED ON  )
SET( CMAKE_CXX_EXTENSIONS        OFF )

PROJECT(
    "Simple Header-Only Webserver"
    VERSION 0.8.6
    LANGUAGES CXX
)

LIST( APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules/" )

INCLUDE( CTest )
INCLUDE( GNUInstallDirs )

STRING( REPLACE "${PROJECT_NAME}" "show"
    CMAKE_INSTALL_DOCDIR
    "${CMAKE_INSTALL_DOCDIR}"
)


ADD_LIBRARY( show INTERFACE )
TARGET_INCLUDE_DIRECTORIES(
    show
    INTERFACE
        "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include/>"
        "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>"
)
INSTALL(
    TARGETS show
    EXPORT "show-config"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
)
INSTALL(
    DIRECTORY "include/"
    DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}"
)


# CTest sets `BUILD_TESTING` to "on" by default
IF( BUILD_TESTING )
    ADD_SUBDIRECTORY( "tests/" )
ENDIF()

# All examples are excluded from `ALL` but can be built manually
ADD_SUBDIRECTORY( "examples/" )

ADD_SUBDIRECTORY( "doc/" )


INCLUDE( CMakePackageConfigHelpers )
WRITE_BASIC_PACKAGE_VERSION_FILE(
    "${CMAKE_BINARY_DIR}/show-config-version.cmake"
    COMPATIBILITY SameMinorVersion
)
INSTALL(
    FILES "${CMAKE_BINARY_DIR}/show-config-version.cmake"
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/show/"
)

INSTALL(
    EXPORT "show-config"
    NAMESPACE "SHOW::"
    DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/show/"
)

EXPORT( EXPORT "show-config" FILE "show-config.cmake" )
